--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title></title>
 </head>
 
-<body>
+<body id="top">
     <!-- Video Section -->
     <header class="v-header container">
         <div class="fullscreen-video-wrap">
@@ -26,22 +26,24 @@
         </div>
     </header>
     <!-- Navbar -->
-    <div id="navigation-bar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div style="padding-left: 10%;"class="navbar-nav">
-                    <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">About</a>
-                    <a class="nav-item nav-link" href="#">Projects</a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
+    <div class="nav-jump-fix" style="height:80px;">
+        <div id="navigation-bar">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div style="padding-left: 10%;" class="navbar-nav">
+                        <a class="nav-item nav-link" href="#top">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#about">About</a>
+                        <a class="nav-item nav-link" href="#projects">Projects</a>
+                        <a class="nav-item nav-link" href="#contact">Contact</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </div>
 
     <script>
@@ -59,9 +61,9 @@
         }
     </script>
     <!-- About Section-->
-    <header style="padding-right: 10%; padding-left:10%;" class="about-section no-m-container">
+    <header class="about-section no-m-container project-background" id="about">
 
-        <div class="about-overlay">
+        <div class="about-overlay ">
 
             <div class="row">
                 <div class="col-sm-12">
@@ -106,20 +108,27 @@
         </div>
     </header>
     <!-- Project Section-->
-    <header style="background-color:#f5f5f5;"class="project-background no-m-container">
+    <header style="background-color:#f5f5f5;" class="project-background no-m-container" id="projects">
+        <div class="row project-header">
+            <h1>Projects</h1>
+        </div>
 
-        <!-- <div class="project-section"> -->
+    </header>
+    <!-- Contact Section-->
+    <header class="about-section no-m-container project-background" id="contact">
+
+        <div class="about-overlay project-header">
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="project-header">Projects</h1>
+                    <h1 class="about-header">Contact</h1>
                 </div>
             </div>
             <div class="row">
             </div>
             <div class="row">
                 <div class="col-sm-6">
-                    <p class="project-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum id
+                    <p class="about-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum id
                         pariatur officia quidem et, delectus facilis quasi reprehenderit omnis qui dolore corporis
                         dicta. Reprehenderit totam dolore molestias recusandae architecto facere quos distinctio labore
                         nobis non repellat obcaecati officiis nulla perferendis, doloribus dolor est consequuntur at
@@ -134,7 +143,7 @@
                         rerum ipsa, modi vel autem sapiente?</p>
                 </div>
                 <div class="col-sm-6">
-                    <p class="project-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit rerum
+                    <p class="about-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit rerum
                         sint blanditiis saepe corrupti maiores, totam nihil ullam, facilis enim necessitatibus eos
                         fugiat aliquid incidunt harum cum. Obcaecati accusantium nostrum deserunt reprehenderit qui
                         labore repudiandae optio, unde voluptatem facere officiis dolor corporis consectetur, temporibus
@@ -150,59 +159,13 @@
                 </div>
             </div>
         </div>
+        </div>
     </header>
-        <!-- Contact Section-->
-        <header class="about-section no-m-container">
-
-            <div class="about-overlay">
-    
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1 class="about-header">Contact</h1>
-                    </div>
-                </div>
-                <div class="row">
-                </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p class="about-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum id
-                            pariatur officia quidem et, delectus facilis quasi reprehenderit omnis qui dolore corporis
-                            dicta. Reprehenderit totam dolore molestias recusandae architecto facere quos distinctio labore
-                            nobis non repellat obcaecati officiis nulla perferendis, doloribus dolor est consequuntur at
-                            alias id, nemo iste. Eligendi culpa accusantium, porro in quis odio sint tempora ex dolore quasi
-                            esse atque dicta dolor libero. Vitae porro hic facilis, numquam tempora, natus aspernatur
-                            necessitatibus animi accusantium reprehenderit excepturi beatae doloremque ipsum odit
-                            repellendus non quisquam. Impedit adipisci dicta distinctio quos eligendi quod error saepe,
-                            voluptates excepturi est velit delectus deleniti doloribus, laudantium voluptas illo cum itaque
-                            consequuntur! Nesciunt, quia. Reiciendis officia, itaque quo aut consequatur laudantium, soluta
-                            eius mollitia earum blanditiis alias perspiciatis hic ad ex rem odit eaque voluptates impedit!
-                            Praesentium modi aspernatur obcaecati? Accusamus culpa quis, fuga alias porro deleniti. Nostrum
-                            rerum ipsa, modi vel autem sapiente?</p>
-                    </div>
-                    <div class="col-sm-6">
-                        <p class="about-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit rerum
-                            sint blanditiis saepe corrupti maiores, totam nihil ullam, facilis enim necessitatibus eos
-                            fugiat aliquid incidunt harum cum. Obcaecati accusantium nostrum deserunt reprehenderit qui
-                            labore repudiandae optio, unde voluptatem facere officiis dolor corporis consectetur, temporibus
-                            facilis incidunt vel! Placeat facilis quisquam ea eos veniam non, enim repellendus cum ipsam
-                            iste? Reprehenderit ducimus voluptates quos debitis molestias ullam suscipit. Id eligendi quo
-                            vitae mollitia aut nemo eos labore facilis expedita. Architecto quas aperiam repellat iste
-                            voluptas, ad provident placeat laborum modi soluta voluptatibus natus at, cumque blanditiis
-                            nesciunt libero laboriosam officiis aliquam itaque. Eius veritatis corrupti in odit deserunt
-                            exercitationem. A at nulla iste quod illum animi numquam nostrum quis non aut atque voluptates
-                            beatae explicabo earum odit, sed sint qui magni excepturi facilis commodi. Quibusdam voluptatem
-                            odit, a ad eveniet recusandae in quisquam nesciunt omnis nihil, sunt ducimus minima laboriosam
-                            praesentium!</p>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </header>
     <!-- Footer -->
     <footer>
         <div class="social-link-bar">
             <div>
-                <i class="fas fa-3x fa-caret-square-up flex row" dest="home"></i>
+                <a class="fas fa-3x fa-caret-square-up flex row" href="#top"></a>
             </div>
             <div class="flex row social">
                 <a class="fab fa-3x fa-linkedin icon-wrap" href="https://www.linkedin.com/in/christopher-babis/"></a>
