added image links

--- a/index.html
+++ b/index.html
@@ -243,27 +243,30 @@
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class="img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class="img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class="img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class="img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class="img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class="img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -272,27 +275,30 @@
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class="img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class="img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class="img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class="img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="responsive zoom-effect-container">
                     <div class="gallery">
                         <div class=" centered img__wrap">
-                            <img class="img__img"
-                                src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
-                            <p class=" img__description">This image looks super neat.</p>
+                            <a target="_blank" href="http://babisburger.herokuapp.com/"><img class="img__img"
+                                    src="http://images1.fanpop.com/images/photos/2600000/HQ-France-wallpapers-france-2627157-1600-1200.jpg" />
+                                <p class="img__description">This image looks super neat.</p>
+                            </a>
                         </div>
                     </div>
                 </div>
