--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <title></title>
 </head>
@@ -138,88 +139,71 @@
                             web design.</p>
                     </div>
                     <div class="col-sm-6">
-                        <canvas style="height: 450px; width: 600px;" id="myChart" class="about-content"
-                            data-aos="fade-up-left" data-aos-anchor="#about">
+                        
+                        <div class="row" id="margin-fix">
+                            <h4>Skills</h4>
+                        </div>
+                        <div class="row" id="margin-fix">
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="600">
+                                <i class="fab fa-4x fa-html5"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="800">
+                                <i class="fab fa-4x fa-css3-alt"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about">
+                                <i class="fab fa-4x fa-js-square"></i>
+                            </div>
+                        </div>
+                        <div class="row" id="margin-fix">
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="400">
+                                <i class="fab fa-4x fa-git-alt"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1; padding-top:25px;" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="1000">
+                                <i class="fab fa-3x fa-node"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2 ion-icon" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="200">
+                                <ion-icon name="logo-npm"></ion-icon>
+                            </div>
+                        </div>
+                        <div class="row" id="margin-fix">
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="200">
+                                <i class="fab fa-spin fa-4x fa-react"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="1000">
+                                <i class="fab fa-4x fa-bootstrap"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="400">
+                                <img style="height: 70px; width: 70px;" src="img/icons8-jquery-filled-100.png">
 
-                        </canvas>
+                            </div>
+                        </div>
+                        <div class="row" id="margin-fix">
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-right"
+                                data-aos-duration="700" data-aos-anchor="#about">
+                                <img style="height: 70px; width: 70px;" src="img/icons8-mongodb-96.png">
+
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="800">
+                                <i class="fab fa-4x fa-github"></i>
+                            </div>
+                            <div class="img-fluid.col-sm-2" id="icon-spacing" style="z-index: 1" data-aos="flip-left"
+                                data-aos-duration="700" data-aos-anchor="#about" data-aos-delay="600">
+                                <img style="height: 70px; width: 70px;" src="img/icons8-mysql-logo-filled-100.png">
+                            </div>
+                        </div>
                     </div>
-                    <script>
-                        let myChart = document.getElementById("myChart").getContext("2d");
-
-                        Chart.defaults.global.defaultFontFamily = "Lato";
-
-                        let skillsChart = new Chart(myChart, {
-                            type: "horizontalBar",
-                            data: {
-                                labels: ["CSS  |  80%", "HTML  |  90%", "React  |  70%", "JavaScript  |  70%", "Node.js  |  60%", "UI Design  |  70%", "Photoshop  |  40%", "MongoDB  |  50%", "Git  |  90%", "MySQL  |  60%"],
-                                datasets: [{
-                                    label: 'Percentage',
-                                    data: [80, 90, 70, 70, 60, 70, 40, 50, 90, 60
-                                    ],
-                                    backgroundColor: ["#04C2C9", "#1B242F", "#04C2C9", "#1B242F", "#04C2C9", "#1B242F", "#04C2C9", "#1B242F", "#04C2C9", "#1B242F", "#04C2C9",]
-
-                                }],
-                                borderWidth: 3,
-                                borderColor: "#333",
-                                hoverBorderWidth: 3
-                            },
-                            options: {
-                                responsive: false,
-                                layout: {
-                                    padding: {
-                                        left: 0,
-                                        right: 0,
-                                        top: 0,
-                                        bottom: 0
-                                    }
-                                },
-                                animation: {
-                                    duration: 4000,
-                                    easing: 'linear'
-
-                                },
-                                legend: {
-                                    display: false
-
-                                },
-
-                                tooltips: {
-                                    enabled: false
-                                },
-                                scales: {
-                                    pointLabels: {
-                                        defaultFontStyle: "bold",
-                                        fontSize: "20px"
-                                    },
-                                    xAxes: [{
-                                        display: false,
-                                        ticks: {
-                                            beginAtZero: true,
-                                        },
-                                        gridLines: {
-                                            color: "rgba(0, 0, 0, 0)",
-
-                                        },
-                                    }],
-                                    yAxes: [{/* 
-                                        ticks: { mirror: true }, */
-
-                                        gridLines: {
-                                            color: "rgba(0, 0, 0, 0)",
-
-                                        },
-                                        barThickness: 30,
-                                        barPercentage: .1
-                                    }]
-                                },
-
-
-                            }
-                        });
-                    </script>
                 </div>
             </div>
-        </div>
     </header>
     <!-- Project Section-->
     <header style="background-color:#f5f5f5;" class="project-background no-m-container" id="projects">
