--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <br>
                 <div class="row">
                     <div class="col-sm-6">
-                        <img id="picSquare" src="img/cactuscrop2.jpg" data-aos="fade-right" data-aos-duration="700"
+                        <img id="picSquare" src="img/cactuscrop2 (1).jpg" data-aos="fade-right" data-aos-duration="700"
                             data-aos-anchor="#navbar-anchor" data-aos-anchor-placement="top-top"></img>
                         <h4 data-aos="fade-right" data-aos-duration="700" data-aos-anchor="#navbar-anchor"
                             data-aos-anchor-placement="top-top">Who is that?
