--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         <section data-aos-anchor="#picture-section" data-aos-anchor-placement="center-center">
             </div>
-            <div class="row" style="justify-content: center;">
+            <div id="gallery-fix" class="row" style="justify-content: center;">
                 <div class="responsive zoom-effect-container" data-aos="fade-up" data-aos-duration="700">
                     <div class="gallery">
                         <div class="img__wrap">
