--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link href="css/style.css" type="text/css" rel="stylesheet">
-    <title></title>
+    <title>chrisbabis.com</title>
 </head>
 
 <body id="top">
