submit button stylingn

--- a/index.html
+++ b/index.html
@@ -100,13 +100,12 @@
                     <div class="col-sm-3" data-aos="flip-right" data-aos-duration="700" data-aos-anchor="#about"
                         data-aos-anchor-placement="top-center">
                         <div id=square>
-
+                                <i style="z-index: 2" class="material-icons md-dark md-48">search</i>
                         </div>
                         <h4>Inquisitive</h4>
                         <p class="about-p">Eager to learn a language or approach a task in a new way.</p>
-
                     </div>
-
+                    
                     <div class="col-sm-3" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200"
                         data-aos-anchor="#about" data-aos-anchor-placement="top-center">
                         <div style="z-index: 1" id="square">
