--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="form_email"></label>
-                                            <input id="form_email" type="email" name="email" class="form-control"
+                                            <input id="form_email" type="email" name="_replyto" class="form-control"
                                                 placeholder="Enter your email" required="required"
                                                 data-error="Valid Email is required.">
                                             <div class="help-block with-errors"></div>
@@ -399,7 +399,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="form_message"></label>
-                                            <textarea id="form_message" name="message" class="form-control"
+                                            <textarea id="form_message" name="name" class="form-control"
                                                 placeholder="Enter your message" rows="4" required
                                                 data-error="Enter your message"></textarea>
                                             <div class="help-block with-errors"></div>
