--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <!-- Video Section -->
     <header class="v-header container">
         <div class="fullscreen-video-wrap">
-            <video src="TwistedLines.mp4" autoplay="true" loop="true" muted="true"></video>
+            <video src="TwistedLines.mp4" autoplay="true" loop="true" muted="true" type="video/mp4">
+            
+            
+            </video>
         </div>
         <div class="header-overlay">
         </div>
