--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                             data-aos="fade-right" data-aos-duration="700" data-aos-anchor="#navbar-anchor"
                             data-aos-anchor-placement="top-top">
                             I'm a Full-Stack Web Developer specializing in the front-end, currently honing my skills in
-                            HTML, CSS, JavaScript, Bootstrap, and React while receiving certification in
-                            Coding/Web Development from the University of Arizona. I have always beesn able to visualize
+                            HTML, CSS, JavaScript, Bootstrap, and React. Recently, I have received certification in
+                            Coding/Web Development from the University of Arizona. I have always been able to visualize
                             something and in turn, make it come to life. Being able to understand and apply knowledge
                             has always come easily to me; coupled with a strong work ethic and a passion for front end
                             web design.</p>
